CSS stop stretching photos.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -93,10 +93,6 @@ body{
 
 }
 
-.search{
-  z-index: 1;
-}
-
 .seat {
   color: white;
 }
